fix(web-app): override carbon overlay z-index

--- a/services/web-app/layouts/layout/layout.module.scss
+++ b/services/web-app/layouts/layout/layout.module.scss
@@ -14,4 +14,7 @@
   // position for PageBreadcrumb
   position: relative;
   margin: $spacing-09 0 0;
+  :global(.cds--side-nav__overlay.cds--side-nav__overlay-active) {
+    z-index: 10;
+  }
 }
